--- a/ICP.vcxproj
+++ b/ICP.vcxproj
@@ -145,18 +145,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Venca_final\ICP-main\ICP\OBJloader.cpp" />
     <ClCompile Include="callbacks.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="ICP.cpp" />
     <ClCompile Include="init.cpp" />
     <ClCompile Include="mesh.cpp" />
+    <ClCompile Include="OBJloader.cpp" />
     <ClCompile Include="shaders.cpp" />
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="verticies.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Venca_final\ICP-main\ICP\OBJloader.h" />
     <ClInclude Include="callbacks.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="camera2.h" />
@@ -164,18 +163,19 @@
     <ClInclude Include="globals.h" />
     <ClInclude Include="init.h" />
     <ClInclude Include="mesh.h" />
+    <ClInclude Include="OBJloader.h" />
     <ClInclude Include="shaders.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="vertex.h" />
     <ClInclude Include="verticies.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\Venca_final\ICP-main\ICP\resources\light.frag" />
+    <None Include="..\..\Venca_final\ICP-main\ICP\resources\light2.vert" />
+    <None Include="..\..\Venca_final\ICP-main\ICP\resources\texture.frag" />
+    <None Include="..\..\Venca_final\ICP-main\ICP\resources\texture.vert" />
     <None Include="resources\basic.frag" />
     <None Include="resources\basic.vert" />
-    <None Include="resources\basic2.frag" />
-    <None Include="resources\basic2.vert" />
-    <None Include="resources\basic_checker.frag" />
-    <None Include="resources\basic_checker.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
